# col-calculator

./: .gitignore  calc.py
backend/: .gitignore  calc.py  pyproject.toml
backend/services/: taxes.py  total.py
backend/src/: main.py
backend/src/config/: config.py
backend/src/services/: plot.py  taxes.py  total.py
backend/src/util/: federal.py  local.py  progressive_tax.py  state.py
backend/tests/util/: test_federal.py  test_state.py
backend/util/: federal.py  local.py  state.py
frontend/col-calculator/: package.json
frontend/col-calculator/src/app/: page.tsx
services/: taxes.py
util/: state.py
