[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
    "integration",
]
pythonpath = [
  "."
]

[project]
name = "col-calculator-backend"
version = "0.0.1"

dependencies = [
    "fastapi[standard]>=0.115.12",
    "matplotlib==3.7.5"
]

[project.optional-dependencies]
test = [
    "pytest==8.3.5",
]

dev = [
    "ruff==0.11.7",
    "pylint==3.3.6"
]
